Updated Security config and Jar scanner libraries